Nidenticon -> Diagon Icons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Nidenticon</title>
+  <title>Diagon Icons</title>
   <script src="sinrand.js"></script>
   <script src="generator.js"></script>
 </head>
